# resume

./: .gitignore  002-mhawkins-cv.tex  Makefile  Makefile.am  Makefile.bak  README.md  configure.ac  main-html.tex
build-aux/m4/: AC_PROG_HTLATEX  AC_PROG_LATEX  AC_PROG_PDFLATEX
config/: tex4ht.cfg
docs/: 001-mhawkins-cv.css  001-mhawkins-cv.html  001mhawkinscv.html  002-mhawkins-cv.css  002-mhawkins-cv.html  development.css  development.html  index.html  management.css  management.html
docs/css/: style.css
docs/js/: resume.js
include/html/: tex4ht.cfg
include/html/css/: style.css
include/pdf/: resume.sty
src/tex/: career-highlights.tex  coverletter.tex  education.tex  experience.tex  main-html.tex  main.tex  michael-hawkins.tex  readme.tex  skills.tex  statement.tex
